--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mb-mongodb",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "MongoDB legacy driver emulation layer on top of mongodb-core, for mongobooster",
   "main": "index.js",
   "repository": {
@@ -10,8 +10,7 @@
   "keywords": [
     "mongodb",
     "driver",
-    "legacy",
-    "mongobooster"
+    "legacy"
   ],
   "dependencies": {
       "mongodb-core": "1.2.21"
