--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mb-qh-mongodb",
+  "name": "qh-mongodb",
   "version": "2.2.24",
   "description": "The official MongoDB driver for Node.js, modified by qinghai",
   "main": "index.js",
